--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,6 @@
 <resources>
+    <!-- Strings related to Manifest -->
     <string name="app_name">图片分发</string>
-
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">登陆</string>
     <string name="title_activity_register">注册</string>
@@ -12,106 +9,138 @@
     <string name="title_activity_History">标注记录</string>
     <string name="title_activity_Guide">使用指南</string>
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
-    <string name="title_activity_sign_up">SignUpActivity</string>
     <string name="title_activity_security_question">设置密保</string>
-    <string name="large_text">
-        "Material is the metaphor.\n\n"
+    <string name="server_error">服务器错误</string>
+    <string name="password_error">密码错误</string>
+    <string name="non_existent_name">不存在该用户名</string>
+    <string name="login_success">登陆成功</string>
+    <string name="down_avator_fail">头像加载失败</string>
+    <string name="loging">登陆中</string>
+    <string name="name_no_empty">用户名不能为空</string>
+    <string name="password_no_empty">密码不能为空</string>
+    <string name="enter_name">请输入用户名</string>
+    <string name="submit">提交</string>
+    <string name="searching">查询中</string>
+    <string name="cancel">取消</string>
+    <string name="enter_password">请输入密码</string>
+    <string name="auto_login">自动登陆</string>
+    <string name="login">登陆</string>
+    <string name="sign_up">注册</string>
+    <string name="forget_pass">忘记密码</string>
+    <!-- Strings related to sign_up -->
+    <string name="sign_up_success">注册成功</string>
+    <string name="name_has_exist">已存在该用户名</string>
+    <string name="pushing_info">提交信息中</string>
+    <string name="pass_no_same">两次密码不一致</string>
+    <string name="pass_length_short">密码长度至少为8</string>
+    <string name="pass_format_error">密码必须且只能由数字和字母组成</string>
+    <string name="ERROR">ERROR</string>
+    <string name="OK">OK</string>
+    <string name="enter_user_name">请输入您想注册的用户名</string>
+    <string name="enter_pass_again">请重复密码</string>
+    <!-- Strings related to Main_activity -->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="exit_success">注销成功</string>
+    <string name="exit_fail">注销失败</string>
+    <string name="first_choose_interest">请先勾选个人兴趣</string>
+    <string name="now_action">现在就去</string>
+    <string name="wait_action">稍后再去</string>
+    <string name="next_tip">下一条</string>
+    <string name="tip1">点我开始打标签任务</string>
+    <string name="tip2">点我判断他人标签</string>
+    <string name="finish_guide">结束教程</string>
+    <string name="task1_name">打标签</string>
+    <string name="task2_name">判断标签</string>
+    <!-- Strings related to Task1 -->
+    <string name="get_task_fail">获取任务失败</string>
+    <string name="SUCCESS">SUCCESS</string>
+    <string name="task_finish">任务完成</string>
+    <string name="submit_success">提交成功</string>
+    <string name="submit_fail">提交失败</string>
+    <string name="no_tasks">暂时没有此类任务</string>
+    <string name="tag_no_empty">标签不能为空，但你可以选择跳过</string>
+    <string name="getting_task">加载任务中</string>
+    <string name="no_exit_task">不能中途退出任务</string>
+    <string name="tip3">这是任务进度</string>
+    <string name="tip4">喜欢本图片就点亮爱心</string>
+    <string name="tip5">在此输入标签，不能为空</string>
+    <string name="tip6">点击提交</string>
+    <string name="tip7">不喜欢可以跳过</string>
+    <string name="enter_tips">请输入标签</string>
+    <string name="comfire_tips">确认标签</string>
+    <string name="dislike">不喜欢</string>
+    <!-- Strings related to Task2 -->
+    <string name="tip8">这是需要判断的标签</string>
+    <string name="tip9">标签符合图片就点我</string>
+    <string name="tip10">标签不符合图片就点我</string>
+    <string name="tip11">把握不定就点我</string>
+    <string name="right">正确</string>
+    <string name="error">错误</string>
+    <string name="unsure">不确定</string>
+    <!-- Strings related to personalinfo -->
+    <string name="get_data_fail">获取数据失败</string>
+    <string name="no_set">未设置</string>
+    <string name="man">男</string>
+    <string name="woman">女</string>
+    <string name="modify_fail">修改失败</string>
+    <string name="modify_success">修改成功</string>
+    <string name="upload_fail">上传到服务器失败</string>
+    <string name="pic_big">图片大小不能超过2MB</string>
+    <string name="upload_file_fail">文件上传发生错误</string>
+    <string name="pic_type_error">不支持的图片扩展名</string>
+    <string name="file_error">无正确的文件上传</string>
+    <string name="get_avator_fail">加载头像失败</string>
+    <string name="get_avator_success">加载头像失败</string>
+    <string name="set_avator_fail">设置头像失败</string>
+    <string name="uploading_avator">上传头像中</string>
+    <string name="modify_sign">修改个性签名(50字符以内)</string>
+    <string name="modify_sex">您的性别是？</string>
+    <string name="modify_qq">修改QQ号码</string>
+    <string name="modfy_phone">修改手机号码</string>
+    <string name="getting_data">获取信息中</string>
+    <string name="user_name">用户名</string>
+    <string name="uid">UID</string>
+    <string name="phone">手机号</string>
+    <string name="qq">QQ</string>
+    <string name="sex">性别</string>
+    <string name="score">积分</string>
+    <string name="sign">个性签名</string>
+    <string name="hobby">兴趣</string>
+    <string name="modify_pass">修改密码</string>
+    <!-- Strings related to Checkid -->
+    <string name="wrong_ans">回答错误</string>
+    <string name="judging">验证中</string>
+    <!-- Strings related to Favourite -->
+    <string name="interest_tip">为了更好地向您推送图片，请勾选您感兴趣的领域</string>
+    <!-- Strings related to Guide -->
+    <string name="check_network">请检查网络</string>
+    <!-- Strings related to History-->
+    <string name="get_his_fail">获取历史记录失败</string>
+    <string name="getting_history">加载历史记录中</string>
+    <string name="comfirm_modify">确认修改</string>
+    <string name="not_modify">此记录无法修改</string>
+    <!-- Strings related to Security_ques-->
+    <string name="squestion_exist">请勿重复设置密保问题</string>
+    <string name="getting_page">加载页面中</string>
+    <string name="ques_no_empty">问题不能为空</string>
+    <string name="ans_no_empty">答案不能为空</string>
+    <string name="que_no_same">问题不能一样</string>
+    <string name="set_sques">请先设置密保</string>
+    <string name="enter_new_pass">请输入新密码</string>
+    <string name="comfirm_new_pass">确认新密码</string>
+    <string name="sure">确认</string>
+    <string name="tips">Tips:密保问题是您修改密码的唯一途径</string>
+    <string name="enter_ans1">请输入问题一答案</string>
+    <string name="enter_ans2">请输入问题二答案</string>
+    <string name="enter_ans3">请输入问题三答案</string>
+    <!-- Strings related to other-->
+    <string name="default_text">1.每次任务有10张图片需要标识；\n2.您可以跳过不喜欢的图片，我们以后将减少推送此类的图片给您；\n3.每个标记之间用中文逗号隔开；\n4.为了更准确地给您推送感兴趣的图片，请在个人兴趣中选择您的兴趣领域。</string>
+    <string name="popwindw_tip">修改头像（大小不要超过1M）</string>
+    <string name="take_photo">拍照</string>
+    <string name="select_from_files">从相册选择</string>
+    <string name="more">点击加载更多</string>
+    <string name="no_more">我也是有底线的</string>
 
-        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
-        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
-        "technologically advanced and open to imagination and magic.\n"
-        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
-        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
-        "flexibility of the material creates new affordances that supercede those in the physical "
-        "world, without breaking the rules of physics.\n"
-        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
-        "interact, and exist in space and in relation to each other. Realistic lighting shows "
-        "seams, divides space, and indicates moving parts.\n\n"
 
-        "Bold, graphic, intentional.\n\n"
-
-        "The foundational elements of print based design typography, grids, space, scale, color, "
-        "and use of imagery guide visual treatments. These elements do far more than please the "
-        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
-        "imagery, large scale typography, and intentional white space create a bold and graphic "
-        "interface that immerse the user in the experience.\n"
-        "An emphasis on user actions makes core functionality immediately apparent and provides "
-        "waypoints for the user.\n\n"
-
-        "Motion provides meaning.\n\n"
-
-        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
-        "inflection points that initiate motion, transforming the whole design.\n"
-        "All action takes place in a single environment. Objects are presented to the user without "
-        "breaking the continuity of experience even as they transform and reorganize.\n"
-        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
-        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
-
-        "3D world.\n\n"
-
-        "The material environment is a 3D space, which means all objects have x, y, and z "
-        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
-        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
-        "position along the z-axis and has a standard 1dp thickness.\n"
-        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
-        "emulated by manipulating the y-axis.\n\n"
-
-        "Light and shadow.\n\n"
-
-        "Within the material environment, virtual lights illuminate the scene. Key lights create "
-        "directional shadows, while ambient light creates soft shadows from all angles.\n"
-        "Shadows in the material environment are cast by these two light sources. In Android "
-        "development, shadows occur when light sources are blocked by sheets of material at "
-        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
-        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
-
-        "Resting elevation.\n\n"
-
-        "All material objects, regardless of size, have a resting elevation, or default elevation "
-        "that does not change. If an object changes elevation, it should return to its resting "
-        "elevation as soon as possible.\n\n"
-
-        "Component elevations.\n\n"
-
-        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
-        "does not vary from 6dp in one app to 16dp in another app).\n"
-        "Components may have different resting elevations across platforms, depending on the depth "
-        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
-
-        "Responsive elevation and dynamic elevation offsets.\n\n"
-
-        "Some component types have responsive elevation, meaning they change elevation in response "
-        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
-        "changes are consistently implemented using dynamic elevation offsets.\n"
-        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
-        "to the component’s resting state. They ensure that elevation changes are consistent "
-        "across actions and component types. For example, all components that lift on press have "
-        "the same elevation change relative to their resting elevation.\n"
-        "Once the input event is completed or cancelled, the component will return to its resting "
-        "elevation.\n\n"
-
-        "Avoiding elevation interference.\n\n"
-
-        "Components with responsive elevations may encounter other components as they move between "
-        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
-        "through other material, components avoid interfering with one another any number of ways, "
-        "whether on a per component basis or using the entire app layout.\n"
-        "On a component level, components can move or be removed before they cause interference. "
-        "For example, a floating action button (FAB) can disappear or move off screen before a "
-        "user picks up a card, or it can move if a snackbar appears.\n"
-        "On the layout level, design your app layout to minimize opportunities for interference. "
-        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
-        "when a user tries to pick up one of cards.\n\n"
-    </string>
 </resources>
